--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,3 +57,16 @@
     --chart-5: 340 75% 55%;
   }
 }
+
+.background {
+  width: 100vw;
+  height: 100vh;
+  background-image: url("/army-camo-bg.jpg");
+  background-repeat: repeat;
+  background-size: cover;
+  overflow: hidden !important;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
