--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,8 +60,8 @@
 }
 
 .background {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-image: url("/army-camo-bg.jpg");
     background-repeat: repeat;
     background-size: cover;
